--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/Css_Files/header.css" />
+  <link rel="stylesheet" href="Youtube-clone/Css_Files/header.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/Css_Files/Genaral.css" />
-  <link rel="stylesheet" href="/Css_Files/video.css" />
-  <link rel="stylesheet" href="/Css_Files/sidebar.css" />
+  <link rel="stylesheet" href="Youtube-clone/Css_Files/Genaral.css" />
+  <link rel="stylesheet" href="Youtube-clone/Css_Files/video.css" />
+  <link rel="stylesheet" href="Youtube-clone/Css_Files/sidebar.css" />
   <title>Document</title>
 </head>
 
@@ -20,62 +20,62 @@
 
   <div class="header">
     <div class="left-section">
-      <img src="/Header_icons/hamburger-menu.svg" alt="" class="header-image" />
-      <img src="/Header_icons/youtube-logo.svg" alt="" class="youtube-image" />
+      <img src="Youtube-clone/Header_icons/hamburger-menu.svg" alt="" class="header-image" />
+      <img src="Youtube-clone/Header_icons/youtube-logo.svg" alt="" class="youtube-image" />
     </div>
     <div class="middle-section">
       <input type="text" placeholder="Search" class="search-bar" />
       <button class="search-btn">
-        <img src="/Header_icons/search.svg" alt="" class="search-icon" />
+        <img src="Youtube-clone/Header_icons/search.svg" alt="" class="search-icon" />
         <div class="tooltip">Search</div>
       </button>
       <button class="voice-btn">
-        <img class="voice-icon" src="/Header_icons/voice-search-icon.svg" alt="" />
+        <img class="voice-icon" src="Youtube-clone/Header_icons/voice-search-icon.svg" alt="" />
         <div class="tooltip">Search with your voice</div>
       </button>
     </div>
     <div class="right-section">
       <div class="upload-btn">
-        <img src="/Header_icons/upload.svg" alt="" class="upload-icon" />
+        <img src="Youtube-clone/Header_icons/upload.svg" alt="" class="upload-icon" />
         <div class="tooltip">Create</div>
       </div>
       <div class="gg-btn">
-        <img src="/Header_icons/youtube-apps.svg" alt="" class="apps-icon" />
+        <img src="Youtube-clone/Header_icons/youtube-apps.svg" alt="" class="apps-icon" />
         <div class="tooltip">Upload</div>
       </div>
       <div class="cc-btn">
-        <img src="/Header_icons/notifications.svg" alt="" class="notifications-icon" />
+        <img src="Youtube-clone/Header_icons/notifications.svg" alt="" class="notifications-icon" />
         <div class="tooltip">Notification</div>
       </div>
 
-      <img src="/channel_pic/Safeimagekit-resized-img.png" alt="" class="rohan-icon" />
+      <img src="Youtube-clone/channel_pic/Safeimagekit-resized-img.png" alt="" class="rohan-icon" />
       <div class="three">3</div>
     </div>
   </div>
   <!-- sidebar -->
   <div class="sidebar">
     <div class="sidebar-link">
-      <img src="/Sidebar_icon/home.svg" alt="" />
+      <img src="Youtube-clone/Sidebar_icon/home.svg" alt="" />
       <div>Home</div>
     </div>
     <div class="sidebar-link">
-      <img src="/Sidebar_icon/explore.svg" alt="" />
+      <img src="Youtube-clone/Sidebar_icon/explore.svg" alt="" />
       <div>Explore</div>
     </div>
     <div class="sidebar-link">
-      <img src="/Sidebar_icon/subscriptions.svg" alt="" />
+      <img src="Youtube-clone/Sidebar_icon/subscriptions.svg" alt="" />
       <div>Subscriptions</div>
     </div>
     <div class="sidebar-link">
-      <img src="/Sidebar_icon/originals.svg" alt="" />
+      <img src="Youtube-clone/Sidebar_icon/originals.svg" alt="" />
       <div>Originals</div>
     </div>
     <div class="sidebar-link">
-      <img src="/Sidebar_icon/youtube-music.svg" alt="" />
+      <img src="Youtube-clone/Sidebar_icon/youtube-music.svg" alt="" />
       <div>Youtube Music</div>
     </div>
     <div class="sidebar-link">
-      <img src="/Sidebar_icon/library.svg" alt="" />
+      <img src="Youtube-clone/Sidebar_icon/library.svg" alt="" />
       <div>Library</div>
     </div>
   </div>
@@ -85,12 +85,12 @@
   <div class="main-container">
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src="/Thumbnail_pic/thumbnail-1.webp" alt="thumbnail-1" />
+        <img class="thum" src="Youtube-clone/Thumbnail_pic/thumbnail-1.webp" alt="thumbnail-1" />
         <div class="timer">14:20</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src="/channel_pic/channel-1.jpeg" alt="" class="channel-image" />
+          <img src="Youtube-clone/channel_pic/channel-1.jpeg" alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -104,12 +104,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src="/Thumbnail_pic/thumbnail-2.webp" alt="" />
+        <img class="thum" src="Youtube-clone/Thumbnail_pic/thumbnail-2.webp" alt="" />
         <div class="timer">8:22</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src="/channel_pic/channel-2.jpeg" alt="" class="channel-image" />
+          <img src="Youtube-clone/channel_pic/channel-2.jpeg" alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">Try Not To Laugh Challenge #9</p>
@@ -121,12 +121,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src="/Thumbnail_pic/thumbnail-3.webp" alt="thumbnail-1" />
+        <img class="thum" src="Youtube-clone/Thumbnail_pic/thumbnail-3.webp" alt="thumbnail-1" />
         <div class="timer">9:33</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src="/channel_pic/channel-3.jpeg" alt="" class="channel-image" />
+          <img src="v/channel_pic/channel-3.jpeg" alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">Crazy Tik Toks Taken Moments Before DISASTER</p>
@@ -138,12 +138,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src="/Thumbnail_pic/thumbnail-4.webp" alt="thumbnail-1" />
+        <img class="thum" src="Youtube-clone/Thumbnail_pic/thumbnail-4.webp" alt="thumbnail-1" />
         <div class="timer">22:09</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src="/channel_pic/channel-4.jpeg" alt="" class="channel-image" />
+          <img src="Youtube-clone/channel_pic/channel-4.jpeg" alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -157,12 +157,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src="/Thumbnail_pic/thumbnail-5.webp" alt="thumbnail-1" />
+        <img class="thum" src="Youtube-clone/Thumbnail_pic/thumbnail-5.webp" alt="thumbnail-1" />
         <div class="timer">11:17</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src="/channel_pic/channel-5.jpeg" alt="" class="channel-image" />
+          <img src="Youtube-clone/channel_pic/channel-5.jpeg" alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -176,12 +176,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src="/Thumbnail_pic/thumbnail-6.webp" alt="thumbnail-1" />
+        <img class="thum" src="Youtube-clone/Thumbnail_pic/thumbnail-6.webp" alt="thumbnail-1" />
         <div class="timer">19:59</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src="/channel_pic/channel-6.jpeg" alt="" class="channel-image" />
+          <img src="Youtube-clone/channel_pic/channel-6.jpeg" alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">Anything You Can Fit In The Circle I’ll Pay For</p>
@@ -194,12 +194,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src="/Thumbnail_pic/thumbnail-7.webp" alt="" />
+        <img class="thum" src="Youtube-clone/Thumbnail_pic/thumbnail-7.webp" alt="" />
         <div class="timer">10:13</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src="/channel_pic/channel-7.jpeg" alt="" class="channel-image" />
+          <img src="Youtube-clone/channel_pic/channel-7.jpeg" alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -212,12 +212,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src="/Thumbnail_pic/thumbnail-8.webp" alt="" />
+        <img class="thum" src="Youtube-clone/Thumbnail_pic/thumbnail-8.webp" alt="" />
         <div class="timer">7:12</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src="/channel_pic/channel-8.jpeg" alt="" class="channel-image" />
+          <img src="Youtube-clone/channel_pic/channel-8.jpeg" alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -230,12 +230,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src="/Thumbnail_pic/thumbnail-9.webp" alt="" />
+        <img class="thum" src="Youtube-clone/Thumbnail_pic/thumbnail-9.webp" alt="" />
         <div class="timer">13:17</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src="/channel_pic/channel-9.jpeg" alt="" class="channel-image" />
+          <img src="Youtube-clone/channel_pic/channel-9.jpeg" alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -249,12 +249,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src="/Thumbnail_pic/thumbnail-10.webp" alt="" />
+        <img class="thum" src="Youtube-clone/Thumbnail_pic/thumbnail-10.webp" alt="" />
         <div class="timer">7:53</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src="/channel_pic/channel-10.jpeg" alt="" class="channel-image" />
+          <img src="Youtube-clone/channel_pic/channel-10.jpeg" alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -267,12 +267,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src="/Thumbnail_pic/thumbnail-11.webp" alt="" />
+        <img class="thum" src="Youtube-clone/Thumbnail_pic/thumbnail-11.webp" alt="" />
         <div class="timer">4:10</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src="/channel_pic/channel-11.jpeg" alt="" class="channel-image" />
+          <img src="Youtube-clone/channel_pic/channel-11.jpeg" alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">Dubai's Crazy Underwater Train and Other Things #Only in Dubai</p>
@@ -285,12 +285,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src="/Thumbnail_pic/thumbnail-12.webp" alt="" />
+        <img class="thum" src="Youtube-clone/Thumbnail_pic/thumbnail-12.webp" alt="" />
         <div class="timer">4:51</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src="/channel_pic/channel-12.jpeg" alt="" class="channel-image" />
+          <img src="Youtube-clone/channel_pic/channel-12.jpeg" alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
