--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src='/channel_pic/channel-1.jpeg' alt="" class="channel-image" />
+          <img src='/Youtube-clone/channel_pic/channel-1.jpeg' alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -104,12 +104,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src='/Thumbnail_pic/thumbnail-2.webp' alt="" />
+        <img class="thum" src='/Youtube-clone/Thumbnail_pic/thumbnail-2.webp' alt="" />
         <div class="timer">8:22</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src='/channel_pic/channel-2.jpeg' alt="" class="channel-image" />
+          <img src='/Youtube-clone/channel_pic/channel-2.jpeg' alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">Try Not To Laugh Challenge #9</p>
@@ -121,12 +121,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src='/Thumbnail_pic/thumbnail-3.webp' alt="thumbnail-1" />
+        <img class="thum" src='/Youtube-clone/Thumbnail_pic/thumbnail-3.webp' alt="thumbnail-1" />
         <div class="timer">9:33</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src='/channel_pic/channel-3.jpeg' alt="" class="channel-image" />
+          <img src='/Youtube-clone/channel_pic/channel-3.jpeg' alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">Crazy Tik Toks Taken Moments Before DISASTER</p>
@@ -138,12 +138,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src='/Thumbnail_pic/thumbnail-4.webp' alt="thumbnail-1" />
+        <img class="thum" src='/Youtube-clone/Thumbnail_pic/thumbnail-4.webp' alt="thumbnail-1" />
         <div class="timer">22:09</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src='/channel_pic/channel-4.jpeg' alt="" class="channel-image" />
+          <img src='/Youtube-clone/channel_pic/channel-4.jpeg' alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -157,12 +157,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src='/Thumbnail_pic/thumbnail-5.webp' alt="thumbnail-1" />
+        <img class="thum" src='/Youtube-clone/Thumbnail_pic/thumbnail-5.webp' alt="thumbnail-1" />
         <div class="timer">11:17</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src='/channel_pic/channel-5.jpeg' alt="" class="channel-image" />
+          <img src='/Youtube-clone/channel_pic/channel-5.jpeg' alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -176,12 +176,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src='/Thumbnail_pic/thumbnail-6.webp' alt="thumbnail-1" />
+        <img class="thum" src='/Youtube-clone/Thumbnail_pic/thumbnail-6.webp' alt="thumbnail-1" />
         <div class="timer">19:59</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src='/channel_pic/channel-6.jpeg' alt="" class="channel-image" />
+          <img src='/Youtube-clone/channel_pic/channel-6.jpeg' alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">Anything You Can Fit In The Circle I’ll Pay For</p>
@@ -194,12 +194,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src='/Thumbnail_pic/thumbnail-7.webp' alt="" />
+        <img class="thum" src='/Youtube-clone/Thumbnail_pic/thumbnail-7.webp' alt="" />
         <div class="timer">10:13</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src='/channel_pic/channel-7.jpeg' alt="" class="channel-image" />
+          <img src='/Youtube-clone/channel_pic/channel-7.jpeg' alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -212,12 +212,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src='/Thumbnail_pic/thumbnail-8.webp' alt="" />
+        <img class="thum" src='/Youtube-clone/Thumbnail_pic/thumbnail-8.webp' alt="" />
         <div class="timer">7:12</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src='/channel_pic/channel-8.jpeg' alt="" class="channel-image" />
+          <img src='/Youtube-clone/channel_pic/channel-8.jpeg' alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -230,12 +230,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src='/Thumbnail_pic/thumbnail-9.webp' alt="" />
+        <img class="thum" src='/Youtube-clone/Thumbnail_pic/thumbnail-9.webp' alt="" />
         <div class="timer">13:17</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src='/channel_pic/channel-9.jpeg' alt="" class="channel-image" />
+          <img src='/Youtube-clone/channel_pic/channel-9.jpeg' alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -249,12 +249,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src='/Thumbnail_pic/thumbnail-10.webp' alt="" />
+        <img class="thum" src='/Youtube-clone/Thumbnail_pic/thumbnail-10.webp' alt="" />
         <div class="timer">7:53</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src='/channel_pic/channel-10.jpeg' alt="" class="channel-image" />
+          <img src='/Youtube-clone/channel_pic/channel-10.jpeg' alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
@@ -267,12 +267,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src='/Thumbnail_pic/thumbnail-11.webp' alt="" />
+        <img class="thum" src='/Youtube-clone/Thumbnail_pic/thumbnail-11.webp' alt="" />
         <div class="timer">4:10</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src='/channel_pic/channel-11.jpeg' alt="" class="channel-image" />
+          <img src='/Youtube-clone/channel_pic/channel-11.jpeg' alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">Dubai's Crazy Underwater Train and Other Things #Only in Dubai</p>
@@ -285,12 +285,12 @@
 
     <div class="video-container">
       <div class="video-preview">
-        <img class="thum" src='/Thumbnail_pic/thumbnail-12.webp' alt="" />
+        <img class="thum" src='/Youtube-clone/Thumbnail_pic/thumbnail-12.webp' alt="" />
         <div class="timer">4:51</div>
       </div>
       <div class="stat">
         <div class="channel-pic">
-          <img src='/channel_pic/channel-12.jpeg' alt="" class="channel-image" />
+          <img src='/Youtube-clone/channel_pic/channel-12.jpeg' alt="" class="channel-image" />
         </div>
         <div class="channel-stat">
           <p class="title">
