--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href='/Youtube-clone/Css_Files/Genaral.css' />
   <link rel="stylesheet" href='/Youtube-clone/Css_Files/video.css' />
-  <link rel="stylesheet" href='/Youtube-clone/Css_Files/sidebar.css' />
-  <title>Document</title>
+  <link rel="stylesheet" href='/Youtube-clone/Css_Files/sidebar.css' />'
+  <link rel="icon" href="/Youtube-clone/icons8-youtube-32.png">'
+  <title>Youtube_Clone</title>
 </head>
 
 <body>
