--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href='/Youtube-clone/Css_Files/Genaral.css' />
   <link rel="stylesheet" href='/Youtube-clone/Css_Files/video.css' />
-  <link rel="stylesheet" href='/Youtube-clone/Css_Files/sidebar.css' />'
+  <link rel="stylesheet" href='/Youtube-clone/Css_Files/sidebar.css' />
   <link type="image/png" sizes="32x32" rel="icon" href="/Youtube-clone/Header_icons/icons8-youtube-32.png">
   <title>Youtube_Clone</title>
 </head>
